# ApexLi

./: .env.example  .gitignore  Makefile  README.md  chat_with_grok_build.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: create-stories.yml  sync-wiki.yml  test.yml
artifacts/design/: playbook_strategy_design.md
artifacts/mock_data/: rb2605_fut_daily_2025.csv
docs/: AGENTS.md  user-journey-and-stories.md
docs/progress/: data-provider-refactor.md
docs/wiki/: Console-Output-Guidelines.md  Development-Guide.md  Harness-Overview.md  Home.md  Multi-round-Analysis-Loop.md  Playbook-Strategy-Pattern.md  Roadmap.md  Structured-LLM-Communication.md  Testing-Strategy.md
eaagent/: __init__.py  agent.py
eaagent/a_plus_plus/: config.py  data_provider.py  graph.py  llm_tracker.py  playbook_loader.py  types.py
eaagent/data_providers/: akshare_stock.py  base.py  factory.py  tushare_futures.py  tushare_stock.py
eaagent/playbooks/: manager.py
eaagent/tools/: __init__.py  tushare_futures.py  (+1 more)
examples/: basic_weather.py
scripts/: sync-wiki.sh
tests/: __init__.py  test_a_plus_plus.py  test_agent.py  test_agent_auto_memory.py  test_agent_memory.py  test_futures_minute_example.py  test_graph.py  test_memory.py  test_playbook_strategies.py  test_tushare.py  test_tushare_minute.py  test_tushare_tool.py
todo/: B1_next_steps.md  data_provider_refactor_plan.md  data_provider_todo.md  graph_refactor_plan.md  martin_fowler_harness_review.md  nextweek_todo.md  plan_grok.md  playbook_update_todo.md  remaining_work.md
web/: app_graph.py  report_builder.py
(+34 files in other folders)
