[project]
name = "eaagent"
version = "0.1.0"
description = "Easy ReAct Agent powered by Grok (xAI)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.55.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
]

[tool.black]
line-length = 100

# 注意：已移除 hatchling 以避免 SSL 安装问题
# 如需打包发布，可改用 setuptools 或 hatchling