[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eaagent"
version = "0.2.0"
description = "ApexLi - 高级交易智能体框架 | 支持股票与期货的多数据源统一抽象层"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "adoocoke", email = "99374085@qq.com" }
]
license = { text = "MIT" }

dependencies = [
    "openai>=1.55.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
]
tushare = [
    "tushare>=1.2.89",
    "pandas>=2.0.0",
]
langgraph = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
]
visualization = [
    "matplotlib>=3.7.0",
    "mplfinance>=0.12.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["eaagent*"]
exclude = ["artifacts*", "tests*", "docs*"]

[tool.black]
line-length = 100
